# LyraFrame

./: LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.agent/artifacts/: asset_consistency_plan.md
.agent/rules/: typescript.md  uiux.md  web.md
docs/: code-preview-enhancement.md  executor-comparison.md  project-report.md  建议.md
scripts/: generate-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  file_system.rs  lf_format.rs  mod.rs
src/components/: LoadingScreen.css  LoadingScreen.tsx  Logo.tsx
src/components/layout/: ActivityBar.tsx  SidePanel.tsx  SidebarContainer.tsx  Workbench.tsx
src/components/ui/: ColorPicker.tsx  OptionSelector.tsx  SliderInput.tsx
src/config/: constants.ts
src/contexts/: ProjectContext.tsx
src/hooks/: useGlobalShortcuts.ts  useProjectSync.ts  useResponsiveLayout.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  zh.json
src/lib/: audio.ts  lfFormat.ts  platform.ts
src/lib/executor/: LightExecutor.ts
src/lib/fs/: index.ts  tauriAdapter.ts  types.ts  webAdapter.ts
src/mcp/: dispatcher.ts  types.ts
src/modules/ai/: AIChatWidget.tsx
src/modules/assets/: AssetBrowser.tsx
src/modules/editor/: CodeEditorPanel.tsx  EditorContainer.tsx  MediaPreview.tsx  ProjectInfoViewer.tsx  monacoThemes.ts
src/modules/explorer/: FileExplorer.css  FileExplorer.tsx
src/modules/inspector/: PropertyPanel.tsx
src/modules/preview/: ElementRenderer.tsx  LightRenderer.tsx  PreviewPlayer.tsx  SandpackRenderer.tsx
src/modules/timeline/: PlayheadCursor.tsx  TimelineClip.tsx  TimelineContainer.tsx  TimelineRuler.tsx  TimelineTrack.tsx  TransportBar.tsx
src/services/: assetService.ts  fileSystemEvents.ts  projectService.ts  sceneService.ts
src/store/: timelineStore.ts  types.ts
src/store/__tests__/: timelineStore.test.ts
src/styles/: ide.css  layout.css  loading.css  theme.css
src/utils/: timelineUtils.ts
src/utils/__tests__/: timelineUtils.test.ts
(+1 files in other folders)
