[package]
name = "lyraframe"
version = "0.1.0"
description = "AI-Powered Programmatic Video Editor"
authors = ["Pete Hsu"]
license = "CC-BY-NC-4.0"
repository = "https://github.com/petehsu/LyraFrame"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lyraframe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["fs", "io-util"] }

# File system utilities
walkdir = "2"

# Compression (for .lf format)
flate2 = "1.0"
base64 = "0.22"

# Audio processing (for waveform generation)
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "ogg", "wav", "flac"] }
hound = "3.5"

# Future: Image/Video processing
# image = "0.25"     # Image processing
# ffmpeg-next = "7"  # Video processing
